# AIvVerse

./: .gitignore  AUTHENTICATION_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  GITHUB_PUSH_GUIDE.md  GOOGLE_AUTH_FIX.md  GOOGLE_AUTH_SETUP.md  GOOGLE_AUTH_SUMMARY.md  LOCAL_DEVELOPMENT_GUIDE.md  MANUAL_PUSH_INSTRUCTIONS.md  NEW_SUPABASE_SETUP.md  OAUTH_FIX_COMPLETE.md  PRODUCTION_OAUTH_SETUP.md  PUSH_AUTHENTICATION_FIX.md  PUSH_FIX.md  QUICK_START.md  README.md  SUPABASE_SITE_URL_FIX.md  SUPABASE_UPDATE_SUMMARY.md  SYSTEM_OVERVIEW.md  UNITY_INTEGRATION_GUIDE.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_FIX.md  VERCEL_OAUTH_FIX.md  auth-callback.html  deploy-to-vercel.sh  index.html  level-template-example.html  login.html  vercel.json
Auth/: AUTHENTICATION_SETUP.md  AuthController.hpp  CMakeLists.txt  GameController.hpp  QUICK_START.md  SUPABASE_SETUP.md  SupabaseClient.hpp  main.cpp  schema.sql  setup_supabase.sh
GameAssets/Game1/: GUID.txt  index.html
GameAssets/Game2/: GUID.txt  dependencies.txt  index.html
GameAssets/Game3/: GUID.txt  index.html
GameAssets/Game4/: GUID.txt  index.html
GameAssets/Game5/: GUID.txt  dependencies.txt  index.html
LevelMap/: index.html  package-lock.json  package.json  vite.config.ts
LevelMap/public/js/: auth-check.js  auth.js  supabase-config.js
LevelMap/src/components/: LevelMap.tsx  UserInfo.tsx
LevelMap/src/lib/: supabaseClient.ts
css/: auth.css  style.css
js/: auth.js  unity-bridge.js
